--- a/public/500.html
+++ b/public/500.html
@@ -1,30 +1,60 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
+<!DOCTYPE html
+    PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+    <head>
+        <title>E3E - E3E</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=7" />
+        <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+        <link href="/stylesheets/e3e.css?1256138448" media="screen" rel="stylesheet" type="text/css" />
+        <link href="/stylesheets/jquery.jgrowl.css?1254855236" media="screen" rel="stylesheet" type="text/css" />
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+        <script src="/javascripts/jquery.ichart.js?1254855236" type="text/javascript"></script>
+        <script src="/javascripts/jquery.jgrowl.min.js?1254855236" type="text/javascript"></script>
+        <script src="/javascripts/jquery.validator.js?1256136282" type="text/javascript"></script>
+        <script type="text/javascript">
+            jQuery(function($) {
+                $(".flash").each(function() {$.jGrowl($(this).html(), {closer:false});})
+                $("form").submit(function() {
+                    $("input[type=submit]").attr("disabled", true);
+                    $(this).find("input[type=submit]").val("Enviando. Espere un momento...");
+                });
+            });
+        </script>
 
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <title>We're sorry, but something went wrong (500)</title>
-	<style type="text/css">
-		body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-		div.dialog {
-			width: 25em;
-			padding: 0 4em;
-			margin: 4em auto 0 auto;
-			border: 1px solid #ccc;
-			border-right-color: #999;
-			border-bottom-color: #999;
-		}
-		h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
-	</style>
-</head>
+    </head>
+    <body>
+        <div class="wrapper">
+            <div id="top">
+                <div id="bar" class="aboutcontroller">
+                </div>
+                <div id="navigation">
+                    <div class="sections">
+                        <a href="/" class="aboutcontroller">Qu&eacute; es E3E</a>
+                        <a href="/encuesta" class="surveyscontroller">Paso 1: Encuesta</a>
+                        <a href="/gas" class="gascontroller">Paso 2: Gas</a>
+                        <a href="/electricidad" class="electricidadcontroller">Paso 3: Electricidad</a>
+                        <a href="/informe" class="reportscontroller">Informe</a>
+                    </div>
+                    <div class="session">
+                        <a href="/contacto">Cont&aacute;ctenos</a>
+                    </div>
+                </div>
+            </div>
 
-<body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
-  </div>
-</body>
+            <div id="page">
+                <div class="content">
+                    <h1>Se ha producido un error</h1>
+                    <p class="about">Lo sentimos, pero se ha producido un error interno en la herramienta E3E.</p>
+                    <p class="about">Por favor <a href="/contacto">ay&uacute;denos a mejorar esta herramienta cont&aacute;ndonos lo sucedido</a>. Gracias.</p>
+                </div>
+            </div>
+            <div class="push"></div>
+        </div>
+        <div class="footer">
+            <div class="bottom">
+                <a href="http://calclab.com">Software hecho a mano por &nbsp;<span class="calc">calc</span></a>
+            </div>
+        </div>
+    </body>
 </html>
